<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dok_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dok_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dok_datum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/austellungsdatum"
            android:textSize="16sp"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/dok_kategorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kategorie"
            android:textSize="16sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/dok_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_foreground"
        android:layout_below="@id/linear_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

</RelativeLayout>